--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -1,6 +1,15 @@
 <!-- <h1>Hello Angular</h1> -->
 
 <!-- <app-server></app-server> -->
-<div class="container">
-  <app-products></app-products>
+<!-- <div class="container">  -->
+<!-- <app-products></app-products> -->
+<!-- </div> -->
+<!-- <div class="container mt-5">
+  <app-ecomm></app-ecomm>
+</div> -->
+<!-- <div class="container mt-5">
+  <app-numbers></app-numbers>
+</div> -->
+<div class="container mt-5">
+  <app-accounts></app-accounts>
 </div>
