--- a/myapp/src/app/accounts/account/account.component.html
+++ b/myapp/src/app/accounts/account/account.component.html
@@ -13,7 +13,7 @@
           Active
         </button>
         <button
-          class="btn btn-outline-secondary btn-sm"
+          class="btn btn-outline-warning btn-sm"
           (click)="changeStatus('InActive')"
         >
           InActive
@@ -27,7 +27,9 @@
       </div>
     </div>
     <div class="col">
-      <button class="btn btn-danger btn-sm">Delete</button>
+      <button class="btn btn-danger btn-sm" (click)="deleteAccount()">
+        Delete
+      </button>
     </div>
   </div>
 </div>
