--- a/myapp/src/app/ecomm/cart/cart.component.html
+++ b/myapp/src/app/ecomm/cart/cart.component.html
@@ -19,7 +19,11 @@
       />
     </div>
     <div class="col">
-      <button class="btn btn-primary" (click)="onAddProduct(productNameInput)">
+      <button
+        name="addProduct"
+        class="btn btn-primary"
+        (click)="onAddProduct(productNameInput)"
+      >
         Add
       </button>
     </div>
