--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -56,6 +56,9 @@
         <li role="presentation" class="nav-item" routerLinkActive="active">
           <a href="" class="nav-link" routerLink="posts">Posts</a>
         </li>
+        <li role="presentation" class="nav-item" routerLinkActive="active">
+          <a href="" class="nav-link" routerLink="admin-login">Admin-Login</a>
+        </li>
       </ul>
     </div>
   </div>
