--- a/insurancepolicy/src/app/components/adminlogin/adminlogin.component.html
+++ b/insurancepolicy/src/app/components/adminlogin/adminlogin.component.html
@@ -1,26 +1,27 @@
 <!-- <p>adminlogin works!</p> -->
 <!-- <h2>works!</h2> -->
 
-<p style="text-align: center">Admin Login</p>
-
-<form style="width: 50vw; margin-left: 25vw">
+<h2 style="text-align: center">Admin Login</h2>
+<form style="width: 50vw; margin-left: 25vw" method="post">
   <div class="form-group">
-    <label for="exampleInputEmail1">Username </label>
+    <label for="username">Username </label>
     <input
-      type="Username"
+      type="text"
       class="form-control"
-      id="exampleInputEmail1"
+      id="username"
       aria-describedby="emailHelp"
       placeholder="Enter Username"
+      required="true"
     />
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
+    <label for="password1">Password</label>
     <input
       type="password"
       class="form-control"
-      id="exampleInputPassword1"
+      id="password1"
       placeholder="Password"
+      required="true"
     />
   </div>
   <button type="submit" routerLink="/view" class="btn btn-primary">
