--- a/insurancepolicy/src/app/components/view/view.component.html
+++ b/insurancepolicy/src/app/components/view/view.component.html
@@ -1,5 +1,5 @@
 <!-- <p>view works!</p> -->
-<h2>Manage Users</h2>
+<!-- <h2>Manage Users</h2>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -28,4 +28,4 @@
       </td>
     </tr>
   </tbody>
-</table>
+</table> -->
